--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -9,7 +9,7 @@
 \def\Api_root#1{
 \def\api_root{#1}} \Api_root{http://www.gradle.org/api/} 
 
-\includeonly{introduction,buildScripts,javaTutorial,tasks,plugins,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
+\includeonly{introduction,buildScripts,javaTutorial,tasks,plugins,javaPlugin,groovyPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -73,6 +73,8 @@
 \include{javaTutorial} 
 \include{tasks} 
 \include{plugins} 
+\include{javaPlugin} 
+\include{groovyPlugin} 
 \include{depMngmt} 
 \include{buildLifecycle}
 \include{multiproject}
