--- a/src/docs/userguide/tasks.tex
+++ b/src/docs/userguide/tasks.tex
@@ -58,6 +58,7 @@ Resources resources = createTask('resources', type: Resources).configure {
 
 If you pass a closure to the \texttt{createTask()} method, this closure gets added as an action to the task. Every task has a configure method, which you can pass a closure for configuring the task. The above example works, because the \texttt{createTask()} method returns the task object.
 
+REPLACING TASKS
 \section{The idea behind Gradle tasks} % (fold)
 \label{sec:the_idea_behind_gradle_tasks}
 
