Removed IBiblio as default repository Added support for FlatDirRepos Changed Gradle build to FlatDirRepos
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@317 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/depMngmt.tex
+++ b/src/docs/userguide/depMngmt.tex
@@ -1,5 +1,6 @@
+%!TEX root = master.tex
 \chapter{Dependency Management}
-
+Java Plugin and FlatFileFolder and IBiblio to be done !!!!!
 \section{Introduction} % (fold)
 \label{sec:Introduction}
 Gradle's dependency management is one of its unique selling points. The current dependency management solutions all require to work with XML descriptor files and repositories. Gradle fully supports this approach. Gradle works \emph{perfectly} with your existent dependency management infrastructure, be it Maven or Ivy. All the repositories you have set up with your custom pom or ivy files can be used as they are. No changes necessary. But Gradle offers also a much simpler approach which might be better suited for many types of projects. 
