Enhanced user guide
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@321 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/buildscripts.tex
+++ b/src/docs/userguide/buildscripts.tex
@@ -1,3 +1,4 @@
+%!TEX root = master.tex
 \chapter{The Gradle Core Tutorial}
 
 If you execute a build, Gradle normally looks for a file called \texttt{gradlefile} in the current directory (There are command line switches to change this behavior. See Appendix \ref{cha:command_line}. We call the gradlefile a build script. Although strictly speaking it is a build configuration script, as we see later.
