--- a/src/docs/userguide/gradleWrapper.tex
+++ b/src/docs/userguide/gradleWrapper.tex
@@ -1,3 +1,4 @@
+%!TEX root = master.tex
 \chapter{The Gradle Wrapper} % (fold)
 \label{cha:the_gradle_wrapper}
 If you want to use Gradle for building your software you might come across to problems. 
