--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -6,8 +6,7 @@
 \evensidemargin}{-0.7cm} \setlength{
 \oddsidemargin}{-0.7cm}
 
-\def\Api_root#1{
-\def\api_root{#1}} \Api_root{http://www.gradle.org/api/} 
+\def \API {http://www.gradle.org/api/latest/} 
 
 \includeonly{introduction,buildScripts,javaTutorial,tasks,plugins,javaPlugin,groovyPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
