--- a/src/docs/userguide/mavenPoms.tex
+++ b/src/docs/userguide/mavenPoms.tex
@@ -1,3 +1,4 @@
+%!TEX root = master.tex
 \chapter{The problem with Mavens dependency management} % (fold)
 \label{cha:the_problem_with_mavens_dependency_management}
 
