--- a/src/docs/userguide/potentialTraps.tex
+++ b/src/docs/userguide/potentialTraps.tex
@@ -1,3 +1,4 @@
+%!TEX root = master.tex
 \chapter{Potential Traps} % (fold)
 \label{cha:potential_traps}
 \section{Groovy Script Variables} % (fold)
